tests/security/taintedHeader/output.txt
ERROR: TaintedData - input.hack:1:24 - Detected a tainted header